[gd_scene load_steps=74 format=2]

[ext_resource path="res://games/celda_escape/actors/shabon/char-cel-left-down.png" type="Texture" id=1]
[ext_resource path="res://games/celda_escape/actors/shabon/char-cel-left-up.png" type="Texture" id=2]
[ext_resource path="res://games/celda_escape/actors/shabon/char-cel-down.png" type="Texture" id=3]
[ext_resource path="res://games/celda_escape/actors/shabon/char-cel-left.png" type="Texture" id=4]
[ext_resource path="res://games/celda_escape/actors/shabon/char-cel-up.png" type="Texture" id=5]
[ext_resource path="res://tools/grog/twod/actor.gd" type="Script" id=6]
[ext_resource path="res://games/celda_escape/actors/shabon/Sha-Walk.png" type="Texture" id=7]
[ext_resource path="res://games/celda_escape/actors/shabon/idle.png" type="Texture" id=8]
[ext_resource path="res://tools/grog/twod/ndirections_sprite.gd" type="Script" id=67]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 151, 437 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 151, 0, 151, 437 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 302, 0, 151, 437 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 437, 151, 437 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 151, 437, 151, 437 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 302, 437, 151, 437 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 874, 151, 437 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 151, 874, 151, 437 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 302, 874, 151, 437 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 224, 446 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 224, 0, 224, 446 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 448, 0, 224, 446 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 446, 224, 446 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 224, 446, 224, 446 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 448, 446, 224, 446 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 892, 224, 446 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 224, 892, 224, 446 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 448, 892, 224, 446 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 202, 436 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 202, 0, 202, 436 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 404, 0, 202, 436 )

[sub_resource type="AtlasTexture" id=22]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 436, 202, 436 )

[sub_resource type="AtlasTexture" id=23]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 202, 436, 202, 436 )

[sub_resource type="AtlasTexture" id=24]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 404, 436, 202, 436 )

[sub_resource type="AtlasTexture" id=25]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 872, 202, 436 )

[sub_resource type="AtlasTexture" id=26]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 202, 872, 202, 436 )

[sub_resource type="AtlasTexture" id=27]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 404, 872, 202, 436 )

[sub_resource type="AtlasTexture" id=28]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 197, 446 )

[sub_resource type="AtlasTexture" id=29]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 197, 0, 197, 446 )

[sub_resource type="AtlasTexture" id=30]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 394, 0, 197, 446 )

[sub_resource type="AtlasTexture" id=31]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 446, 197, 446 )

[sub_resource type="AtlasTexture" id=32]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 197, 446, 197, 446 )

[sub_resource type="AtlasTexture" id=33]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 394, 446, 197, 446 )

[sub_resource type="AtlasTexture" id=34]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 892, 197, 446 )

[sub_resource type="AtlasTexture" id=35]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 197, 892, 197, 446 )

[sub_resource type="AtlasTexture" id=36]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 394, 892, 197, 446 )

[sub_resource type="AtlasTexture" id=37]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 150, 438 )

[sub_resource type="AtlasTexture" id=38]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 150, 0, 150, 438 )

[sub_resource type="AtlasTexture" id=39]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 300, 0, 150, 438 )

[sub_resource type="AtlasTexture" id=40]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 438, 150, 438 )

[sub_resource type="AtlasTexture" id=41]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 150, 438, 150, 438 )

[sub_resource type="AtlasTexture" id=42]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 300, 438, 150, 438 )

[sub_resource type="AtlasTexture" id=43]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 876, 150, 438 )

[sub_resource type="AtlasTexture" id=44]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 150, 876, 150, 438 )

[sub_resource type="AtlasTexture" id=45]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 300, 876, 150, 438 )

[sub_resource type="AtlasTexture" id=46]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 220, 420 )

[sub_resource type="AtlasTexture" id=47]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 220, 0, 220, 420 )

[sub_resource type="AtlasTexture" id=48]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 440, 0, 220, 420 )

[sub_resource type="AtlasTexture" id=49]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 0, 420, 220, 420 )

[sub_resource type="AtlasTexture" id=50]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 220, 420, 220, 420 )

[sub_resource type="AtlasTexture" id=51]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 440, 420, 220, 420 )

[sub_resource type="AtlasTexture" id=52]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 0, 840, 220, 420 )

[sub_resource type="AtlasTexture" id=53]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 220, 840, 220, 420 )

[sub_resource type="SpriteFrames" id=54]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ), SubResource( 42 ), SubResource( 43 ), SubResource( 44 ), SubResource( 45 ), SubResource( 46 ), SubResource( 47 ), SubResource( 48 ), SubResource( 49 ), SubResource( 50 ), SubResource( 51 ), SubResource( 52 ), SubResource( 53 ), ExtResource( 8 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="Animation" id=55]
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}

[sub_resource type="Animation" id=56]
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 21 ]
}

[sub_resource type="Animation" id=57]
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 53 ]
}

[sub_resource type="Animation" id=58]
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 33 ]
}

[sub_resource type="Animation" id=59]
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 44 ]
}

[sub_resource type="Animation" id=60]
length = 0.9
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8 ]
}

[sub_resource type="Animation" id=61]
length = 0.9
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 18, 19, 20, 21, 22, 23, 24, 25, 26 ]
}

[sub_resource type="Animation" id=62]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 45, 46, 47, 48, 49, 50, 51, 52 ]
}

[sub_resource type="Animation" id=63]
length = 0.9
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 27, 28, 29, 30, 31, 32, 33, 34, 35 ]
}

[sub_resource type="Animation" id=64]
length = 0.9
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 36, 37, 38, 39, 40, 41, 42, 43, 44 ]
}

[node name="shabon" type="Node2D"]
z_index = 1
script = ExtResource( 6 )

[node name="Sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 54 )
frame = 50
offset = Vector2( 0, -180 )

[node name="animation" type="AnimationPlayer" parent="."]
anims/idle_front = SubResource( 55 )
anims/idle_left = SubResource( 56 )
anims/idle_leftfront = SubResource( 57 )
anims/idle_leftup = SubResource( 58 )
anims/idle_up = SubResource( 59 )
anims/walk_front = SubResource( 60 )
anims/walk_left = SubResource( 61 )
anims/walk_leftfront = SubResource( 62 )
anims/walk_leftup = SubResource( 63 )
anims/walk_up = SubResource( 64 )

[node name="speech_position" type="Position2D" parent="."]
position = Vector2( 0, -350 )
__meta__ = {
"_gizmo_extents_": 8.0
}

[node name="ndirections" type="Node" parent="."]
script = ExtResource( 67 )
config = [ {
"idle": "idle_left.flip_h",
"value": 22.5,
"walk": "walk_left.flip_h"
}, {
"idle": "idle_leftfront.flip_h",
"value": 67.5,
"walk": "walk_leftfront.flip_h"
}, {
"idle": "idle_front",
"value": 112.5,
"walk": "walk_front"
}, {
"idle": "idle_leftfront",
"value": 157.5,
"walk": "walk_leftfront"
}, {
"idle": "idle_left",
"value": 202.5,
"walk": "walk_left"
}, {
"idle": "idle_leftup",
"value": 247.5,
"walk": "walk_leftup"
}, {
"idle": "idle_up",
"value": 292.5,
"walk": "walk_up"
}, {
"idle": "idle_leftup.flip_h",
"value": 337.5,
"walk": "walk_leftup.flip_h"
} ]
animation_path = NodePath("../../shabon/animation")
sprite_path = NodePath("../../shabon/Sprite")
[connection signal="angle_changed" from="." to="ndirections" method="_on_angle_changed"]
[connection signal="start_walking" from="." to="ndirections" method="_on_start_walking"]
[connection signal="stop_walking" from="." to="ndirections" method="_on_stop_walking"]
